<?xml version="1.0"?>
<package format="2">
  <name>hv_bridge_2</name>
  <version>0.0.0</version>
  <description>The bridging package for ROS2</description>

  <maintainer email="shindler25@gmail.com">Nicholas Shindler</maintainer>

  <license>GPLv3</license>

  <author email="shindler25@gmail.com">Nicholas Shindler</author>


  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>mp_interfaces</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
	  <build_type>ament_python</build_type>

  </export>
</package>
